fix link modal view on mobile

--- a/src/shared/ui-kit/TextEditor/components/ElementButton/components/LinkModal/LinkModal.module.scss
+++ b/src/shared/ui-kit/TextEditor/components/ElementButton/components/LinkModal/LinkModal.module.scss
@@ -2,6 +2,7 @@
 
 .modal {
   max-width: 30rem;
+  width: 100%;
 }
 
 .form {
